--- a/cod4recorder.vcxproj
+++ b/cod4recorder.vcxproj
@@ -88,6 +88,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\cod4\hooks\hk_CL_Frame.cpp" />
+    <ClCompile Include="src\cod4\hooks\hk_d3d.cpp" />
     <ClCompile Include="src\cod4\hooks\init.cpp" />
     <ClCompile Include="src\cod4\recorder.cpp" />
     <ClCompile Include="src\cod4\replayer.cpp" />
@@ -99,15 +100,14 @@
     <ClCompile Include="src\imgui\imgui_impl_win32.cpp" />
     <ClCompile Include="src\imgui\imgui_widgets.cpp" />
     <ClCompile Include="src\input.cpp" />
+    <ClCompile Include="src\minhook\buffer.c" />
+    <ClCompile Include="src\minhook\hde\hde32.c" />
+    <ClCompile Include="src\minhook\hde\hde64.c" />
+    <ClCompile Include="src\minhook\hook.c" />
+    <ClCompile Include="src\minhook\trampoline.c" />
     <ClCompile Include="src\savefile.cpp" />
     <ClCompile Include="src\timing.cpp" />
     <ClCompile Include="src\userinterface.cpp" />
-    <ClCompile Include="src\kiero\kiero.cpp" />
-    <ClCompile Include="src\kiero\minhook\src\buffer.c" />
-    <ClCompile Include="src\kiero\minhook\src\hde\hde32.c" />
-    <ClCompile Include="src\kiero\minhook\src\hde\hde64.c" />
-    <ClCompile Include="src\kiero\minhook\src\hook.c" />
-    <ClCompile Include="src\kiero\minhook\src\trampoline.c" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -128,28 +128,22 @@
     <ClInclude Include="src\imgui\imstb_rectpack.h" />
     <ClInclude Include="src\imgui\imstb_textedit.h" />
     <ClInclude Include="src\imgui\imstb_truetype.h" />
+    <ClInclude Include="src\imgui\include.h" />
     <ClInclude Include="src\includes.h" />
     <ClInclude Include="src\input.h" />
-    <ClInclude Include="src\kiero\kiero.h" />
-    <ClInclude Include="src\kiero\minhook\include\MinHook.h" />
-    <ClInclude Include="src\kiero\minhook\src\buffer.h" />
-    <ClInclude Include="src\kiero\minhook\src\hde\hde32.h" />
-    <ClInclude Include="src\kiero\minhook\src\hde\hde64.h" />
-    <ClInclude Include="src\kiero\minhook\src\hde\pstdint.h" />
-    <ClInclude Include="src\kiero\minhook\src\hde\table32.h" />
-    <ClInclude Include="src\kiero\minhook\src\hde\table64.h" />
-    <ClInclude Include="src\kiero\minhook\src\trampoline.h" />
     <ClInclude Include="src\cod4\dataid.h" />
+    <ClInclude Include="src\minhook\buffer.h" />
+    <ClInclude Include="src\minhook\hde\hde32.h" />
+    <ClInclude Include="src\minhook\hde\hde64.h" />
+    <ClInclude Include="src\minhook\hde\pstdint.h" />
+    <ClInclude Include="src\minhook\hde\table32.h" />
+    <ClInclude Include="src\minhook\hde\table64.h" />
+    <ClInclude Include="src\minhook\MinHook.h" />
+    <ClInclude Include="src\minhook\trampoline.h" />
     <ClInclude Include="src\savefile.h" />
     <ClInclude Include="src\timing.h" />
     <ClInclude Include="src\userinterface.h" />
     <ClInclude Include="src\window.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="src\kiero\minhook\dll_resources\MinHook.def" />
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="src\kiero\minhook\dll_resources\MinHook.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
