--- a/cod4recorder.vcxproj
+++ b/cod4recorder.vcxproj
@@ -87,6 +87,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\cod4\angles.cpp" />
     <ClCompile Include="src\cod4\hooks\hk_CL_Frame.cpp" />
     <ClCompile Include="src\cod4\hooks\hk_d3d.cpp" />
     <ClCompile Include="src\cod4\hooks\init.cpp" />
@@ -111,34 +112,97 @@
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\cod4\angles.h" />
     <ClInclude Include="src\cod4\enums\actionslottype.h" />
+    <ClInclude Include="src\cod4\enums\cubemapshot.h" />
+    <ClInclude Include="src\cod4\enums\demotype.h" />
     <ClInclude Include="src\cod4\enums\he_type.h" />
+    <ClInclude Include="src\cod4\enums\invalidcmdhinttype.h" />
+    <ClInclude Include="src\cod4\enums\maptype.h" />
+    <ClInclude Include="src\cod4\enums\materialworldvertexformat.h" />
     <ClInclude Include="src\cod4\enums\objectivestate.h" />
     <ClInclude Include="src\cod4\enums\offhandsecondaryclass.h" />
     <ClInclude Include="src\cod4\enums\stancestate.h" />
     <ClInclude Include="src\cod4\enums\team.h" />
     <ClInclude Include="src\cod4\enums\tr_type.h" />
     <ClInclude Include="src\cod4\enums\viewlocktypes.h" />
+    <ClInclude Include="src\cod4\enums\visionsetlerpstyle.h" />
     <ClInclude Include="src\cod4\globaldatapointers.h" />
     <ClInclude Include="src\cod4\recorder.h" />
     <ClInclude Include="src\cod4\replayer.h" />
+    <ClInclude Include="src\cod4\types\$BE9F66374A020A9809EEAF403416A176.h" />
+    <ClInclude Include="src\cod4\types\$F6DFD6D87F75480A1EF1906639406DF5.h" />
+    <ClInclude Include="src\cod4\types\cardmemory.h" />
+    <ClInclude Include="src\cod4\types\centity.h" />
     <ClInclude Include="src\cod4\types\clientarchivedata.h" />
     <ClInclude Include="src\cod4\types\clientstate.h" />
+    <ClInclude Include="src\cod4\types\complex.h" />
+    <ClInclude Include="src\cod4\types\cpose.h" />
     <ClInclude Include="src\cod4\types\entitystate.h" />
     <ClInclude Include="src\cod4\types\gamestate.h" />
+    <ClInclude Include="src\cod4\types\cg.h" />
+    <ClInclude Include="src\cod4\types\gfxdepthoffield.h" />
+    <ClInclude Include="src\cod4\types\gfxdrawsurf.h" />
+    <ClInclude Include="src\cod4\types\gfxdrawsurffields.h" />
+    <ClInclude Include="src\cod4\types\gfxfilm.h" />
+    <ClInclude Include="src\cod4\types\gfxglow.h" />
+    <ClInclude Include="src\cod4\types\gfximage.h" />
+    <ClInclude Include="src\cod4\types\gfximageloaddef.h" />
+    <ClInclude Include="src\cod4\types\gfxlight.h" />
+    <ClInclude Include="src\cod4\types\gfxlightdef.h" />
+    <ClInclude Include="src\cod4\types\gfxlightimage.h" />
+    <ClInclude Include="src\cod4\types\gfxpixelshaderloaddef.h" />
+    <ClInclude Include="src\cod4\types\gfxskincacheentry.h" />
+    <ClInclude Include="src\cod4\types\gfxstatebits.h" />
+    <ClInclude Include="src\cod4\types\gfxtexture.h" />
+    <ClInclude Include="src\cod4\types\gfxvertexshaderloaddef.h" />
+    <ClInclude Include="src\cod4\types\gfxviewport.h" />
     <ClInclude Include="src\cod4\types\hud.h" />
     <ClInclude Include="src\cod4\types\actionslotparam.h" />
     <ClInclude Include="src\cod4\types\clientactive.h" />
     <ClInclude Include="src\cod4\types\clsnapshot.h" />
     <ClInclude Include="src\cod4\types\hudelem.h" />
+    <ClInclude Include="src\cod4\types\hudelemsoundinfo.h" />
     <ClInclude Include="src\cod4\types\hudelem_color.h" />
     <ClInclude Include="src\cod4\types\lerpentitystate.h" />
     <ClInclude Include="src\cod4\types\mantlestate.h" />
+    <ClInclude Include="src\cod4\types\material.h" />
+    <ClInclude Include="src\cod4\types\materialargumentcodeconst.h" />
+    <ClInclude Include="src\cod4\types\materialargumentdef.h" />
+    <ClInclude Include="src\cod4\types\materialconstantdef.h" />
+    <ClInclude Include="src\cod4\types\materialinfo.h" />
+    <ClInclude Include="src\cod4\types\materialpass.h" />
+    <ClInclude Include="src\cod4\types\materialpixelshader.h" />
+    <ClInclude Include="src\cod4\types\materialpixelshaderprogram.h" />
+    <ClInclude Include="src\cod4\types\materialshaderargument.h" />
+    <ClInclude Include="src\cod4\types\materialstreamrouting.h" />
+    <ClInclude Include="src\cod4\types\materialtechnique.h" />
+    <ClInclude Include="src\cod4\types\materialtechniqueset.h" />
+    <ClInclude Include="src\cod4\types\materialtexturedef.h" />
+    <ClInclude Include="src\cod4\types\materialtexturedefinfo.h" />
+    <ClInclude Include="src\cod4\types\materialvertexdeclaration.h" />
+    <ClInclude Include="src\cod4\types\materialvertexshader.h" />
+    <ClInclude Include="src\cod4\types\materialvertexshaderprogram.h" />
+    <ClInclude Include="src\cod4\types\materialvertexstreamrouting.h" />
     <ClInclude Include="src\cod4\types\objective.h" />
     <ClInclude Include="src\cod4\types\outpacket.h" />
-    <ClInclude Include="src\cod4\types\playerState.h" />
+    <ClInclude Include="src\cod4\types\picmip.h" />
+    <ClInclude Include="src\cod4\types\playerentity.h" />
+    <ClInclude Include="src\cod4\types\playerstate.h" />
+    <ClInclude Include="src\cod4\types\refdef.h" />
+    <ClInclude Include="src\cod4\types\score.h" />
+    <ClInclude Include="src\cod4\types\shellshock.h" />
+    <ClInclude Include="src\cod4\types\snapshot.h" />
     <ClInclude Include="src\cod4\types\sprintstate.h" />
     <ClInclude Include="src\cod4\types\trajectory.h" />
+    <ClInclude Include="src\cod4\types\vec.h" />
+    <ClInclude Include="src\cod4\types\viewdamage.h" />
+    <ClInclude Include="src\cod4\types\visionsetlerpstyle.h" />
+    <ClInclude Include="src\cod4\types\visionsetvars.h" />
+    <ClInclude Include="src\cod4\types\water.h" />
+    <ClInclude Include="src\cod4\types\waterwritable.h" />
+    <ClInclude Include="src\imgui\extras.h" />
+    <ClInclude Include="src\vec.h" />
     <ClInclude Include="src\helper.h" />
     <ClInclude Include="src\cod4\include.h" />
     <ClInclude Include="src\cod4\types\dvar.h" />
